[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Characters/PlayerSmall.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Characters/PlayerStates.gd" type="Script" id=3]
[ext_resource path="res://Assets/Characters/Shotgun.png" type="Texture" id=4]
[ext_resource path="res://Assets/SFX/ShotgunShot.wav" type="AudioStream" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 1 )
shader_param/hit_color = Color( 1.3, 1.3, 1.3, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.875, 12 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 11, 7 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 0 ), Vector2( 7, -2 ), Vector2( 7, 0 ), Vector2( 7, -4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/Body:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 0 ), Vector2( 7, -4 ) ]
}

[node name="Player" type="KinematicBody2D" groups=["drownable", "hittable", "player"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 3 )

[node name="YSort" type="YSort" parent="."]
material = SubResource( 6 )
position = Vector2( 0, -24 )

[node name="Body" type="Sprite" parent="YSort"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 7, 0 )

[node name="Hand" type="Sprite" parent="YSort"]
use_parent_material = true
position = Vector2( 20, 0 )
texture = ExtResource( 4 )
offset = Vector2( 31, 6 )

[node name="ShotgunHitbox" type="Area2D" parent="YSort/Hand" groups=["shotgun_hitbox"]]
position = Vector2( -20, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/Hand/ShotgunHitbox"]
position = Vector2( 59, 1 )
polygon = PoolVector2Array( 88, -13, 255.5, -25, 255.5, 25, 88, 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/Hand/ShotgunHitbox"]
position = Vector2( 121.875, 0 )
shape = SubResource( 5 )

[node name="GunPoint" type="Position2D" parent="YSort/Hand"]
position = Vector2( 70, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 2 )
anims/walk = SubResource( 4 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="HitFlashTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="ShotgunSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.4
bus = "SFX"
